mysqld.cc:   Corrects build problems embedded on Windows Makefile.am:   Install .sym or mysqld-debug if exists query_cache_debug.test, query_cache_debug.result:   Set more resonable query cache size (bug#35749) CMakeLists.txt:   Added missing stacktrace.c

mysql-test/r/query_cache_debug.result:
  Set more resonable query cache size (bug#35749)
mysql-test/t/query_cache_debug.test:
  Set more resonable query cache size (bug#35749)
libmysqld/CMakeLists.txt:
  Added missing stacktrace.c
sql/Makefile.am:
  Install .sym or mysqld-debug if exists
sql/mysqld.cc:
  Corrects build problems embedded on Windows